    sources.list. Further addresses #517227

  [ gregor herrmann ]
  * Bump Standards-Version to 3.8.1 (dh-make-perl, tests and generated
    packages).
  * Remove leading article from test distributions' short description.

  [ Ryan Niebur ]
  * if --pkg-perl, set the changelog to UNRELEASED by default
  * if --pkg-perl is given, and --dist is not, set dist = sid
  * add myself to uploaders

 -- Ryan Niebur <ryanryan52@gmail.com>  Sat, 21 Mar 2009 00:48:42 -0700

dh-make-perl (0.52) unstable; urgency=low

  [ Damyan Ivanov ]
  * check if package named as the created one or containing modules with the
    same name already exists. Thanks to Brian Cassidy for bringing up the
    problem and Gregor Herrmann and Don Armstrong for the suggestions about
    the implementation
  * add cpan2deb 'flavour' of dh-make-perl. If it is called by that name, the
    behaviour changes for easy .deb creation.
  * add --locate command, showing if given Perl module is core, or in some
    Debian package
  * Debian::AptContents: explicitly use IO::Uncompress::Gunzip
    + Rework Contents file names matching from sources.list entries. In the
      process, stop allowing only sid/unstable items.
      Closes: #517227 -- dh-make-perl cannot find dependency using apt-file
  * update years of copyright

  [ gregor herrmann ]
  * Add libtie-ixhash-perl to Build-Depends-Indep and Depends.
  * Create symlinks /usr/bin/cpan2deb -> dh-make-perl and
    /usr/share/man/man1/cpan2deb.1p.gz -> dh-make-perl.1p.gz.
  * "--exclude": use default values from Dpkg::Source::Package instead of
    maintaining our own list; if invoked without arguments use default values
    again.
  * "--help": use pod2usage() instead of the hand-crafted usage_instructions()
    method, duplicate maintenance of documentation is error-prone.
  * Add the Apache License, Version 2.0 to the list of recognized licenses
    (closes: #511588).

 -- Damyan Ivanov <dmn@debian.org>  Fri, 27 Feb 2009 22:46:08 +0200
